[gd_scene load_steps=2 format=3 uid="uid://boq4u3boi7u4l"]

[ext_resource type="Script" path="res://UI/Main Menu/menu.gd" id="1_mqpl2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 163.0
offset_right = -1.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mqpl2")
game_scene = "res://Water/WaterTestScene.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = -50.0
offset_right = 426.0
offset_bottom = 51.0
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Credits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
